# chess

./: CMakeLists.txt  README.md  config  generate.bat  sprawozdanie.docx
ChessApp/: main.cpp
ChessLib/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessPieces.h  Chessboard.cpp  Chessboard.h  ChessboardPrinter.cpp  ChessboardPrinter.h  FileMoveWriter.h  Game.cpp  Game.h  GameStatus.h  HumanPlayer.cpp  HumanPlayer.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.h  MoveWriterUtilites.h  MoveWriterUtilities.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Tile.cpp  Tile.h
ChessLib/ChessPieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
ChessLib/Players/: HumanPlayer.cpp  HumanPlayer.h  Player.h  RandomPlayer.cpp  RandomPlayer.h
ChessUnitTest/: TestChessboard.cpp  TestMoveWriter.cpp
html/: md_README.html  pages.html
html/search/: pages_0.js
latex/: md_README.tex  refman.tex
